--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ logging.level.org.springframework = info
 logging.level.org.springframework.web = info
 spring.jackson.serialization.write-dates-as-timestamps=false
 
-# H2
-spring.h2.console.enabled=true
+# mysql
+spring.datasource.url=jdbc:mysql://ec2-13-209-42-56.ap-northeast-2.compute.amazonaws.com:3306/heroku_48f2ab28f11bbc0?reconnect=true
+spring.datasource.username=root
+spring.datasource.password=111111
 
 
 
