--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,7 +3,7 @@ logging.level.org.springframework.web = info
 spring.jackson.serialization.write-dates-as-timestamps=false
 
 # mysql
-spring.datasource.url=jdbc:mysql://ec2-13-209-42-56.ap-northeast-2.compute.amazonaws.com:3306/heroku_48f2ab28f11bbc0?reconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/heroku_48f2ab28f11bbc0?reconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=111111
 
